--- a/.env
+++ b/.env
@@ -10,11 +10,11 @@ LOG_LEVEL=debug
 JWT_TTL=10080
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
-DB_DATABASE=shopsoa
+DB_DATABASE=railway 
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
