--- a/.env
+++ b/.env
@@ -9,12 +9,20 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 JWT_TTL=10080
 
+# DB_CONNECTION=mysql
+# DB_HOST=mysql://root:hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb@metro.proxy.rlwy.net:
+# DB_PORT=37003
+# DB_DATABASE=railway 
+# DB_USERNAME=root
+# DB_PASSWORD=hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb
+
+
 DB_CONNECTION=mysql
-DB_HOST=mysql://root:hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb@metro.proxy.rlwy.net:
-DB_PORT=37003
-DB_DATABASE=railway 
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=shopsoa 
 DB_USERNAME=root
-DB_PASSWORD=hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
