--- a/.env
+++ b/.env
@@ -17,12 +17,21 @@ JWT_TTL=10080
 # DB_PASSWORD=hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb
 
 
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=shopsoa 
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=shopsoa 
+DB_HOST=mysql.railway.internal
+DB_PORT=37003
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=hVUvTZJdHoOXiTSenHzVovjLEQEgAyBb
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
