--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "angular": "^1.6.10"
+        "angular": "^1.6.10",
+        "html-react-parser": "^5.2.3"
     }
 }
