--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
+APP_HOST=127.0.0.1
 APP_KEY=base64:mRo1u6xcWkPhd0lYB04pLt8ytqcgKMv9LU5NQq7yPuA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 URL_API=http://localhost:8888/api
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -10,11 +11,12 @@ LOG_LEVEL=debug
 JWT_TTL=10080
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=theme_soa
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=theme_soa
+DB_PASSWORD=Alone@14062001
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
